feat: twprojects - Criando a página de cadastro de clientes

--- a/twprojects/src/main/resources/templates/clients/index.html
+++ b/twprojects/src/main/resources/templates/clients/index.html
@@ -13,7 +13,7 @@
             <li><strong>TWProjects</strong></li>
         </ul>
         <ul>
-            <li><a href="#">Clients</a></li>
+            <li><a href="/clients">Clients</a></li>
         </ul>
     </nav>
 
@@ -39,7 +39,7 @@
             </tbody>
         </table>
 
-        <a href="#" role="button">Novo Cliente</a>
+        <a href="/clients/create" role="button">Novo Cliente</a>
     </main>
 </body>
 </html>
